overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #3F392F !important;
-   
+   overflow-x: hidden;
 }
 
 code {
